# partisia-example-contract

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
src/: contract.rs  lib.rs  zk_compute.rs  zk_test.rs
token/: Cargo.toml  README.md
token/src/: test.rs
